force-app/main/default/objects/NPSFocusSnaps__c/NPSFocusSnaps__c.object-meta.xml
<CustomObject>
    <label>NPSFocusSnaps</label>
    <nameField>
        <label>NPSFocusSnaps Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPSFocusSnaps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>