force-app/main/default/objects/NPSFocusSnaps__c/fields/Focus_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Focus_Account_Type__c</fullName>
    <label>Focus Account Type</label>
    <length>225</length>
    <type>Text</type>
</CustomField>