force-app/main/default/objects/NPSFocusSnaps__c/fields/Focus_Owner__c.field-meta.xml
<CustomField>
    <fullName>Focus_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Focus Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NPSFocusSnaps</relationshipName>
    <type>Lookup</type>
</CustomField>