force-app/main/default/objects/NPSFocusSnaps__c/fields/Focus_Owner_Text__c.field-meta.xml
<CustomField>
    <fullName>Focus_Owner_Text__c</fullName>
    <label>Focus Owner Text</label>
    <length>225</length>
    <type>Text</type>
</CustomField>