force-app/main/default/objects/NPSFocusSnaps__c/fields/HasNPSCoverage__c.field-meta.xml
<CustomField>
    <fullName>HasNPSCoverage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasNPSCoverage</label>
    <type>Checkbox</type>
</CustomField>