force-app/main/default/objects/NPSFocusSnaps__c/fields/HasNPSCoveragen__c.field-meta.xml
<CustomField>
    <fullName>HasNPSCoveragen__c</fullName>
    <label>HasNPSCoveragen</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>