force-app/main/default/objects/NPSFocusSnaps__c/fields/Most_Recent_NPS__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_NPS__c</fullName>
    <label>Most Recent NPS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>