force-app/main/default/objects/NPSFocusSnaps__c/fields/NPS_Perceived__c.field-meta.xml
<CustomField>
    <fullName>NPS_Perceived__c</fullName>
    <label>NPS Perceived</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>