force-app/main/default/objects/NPSFocusSnaps__c/fields/OS_Cases__c.field-meta.xml
<CustomField>
    <fullName>OS_Cases__c</fullName>
    <label>OS Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>