force-app/main/default/objects/NPSFocusSnaps__c/fields/Passive__c.field-meta.xml
<CustomField>
    <fullName>Passive__c</fullName>
    <label>Passive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>