force-app/main/default/objects/NPSFocusSnaps__c/fields/Total_Open_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Total_Open_Pipeline__c</fullName>
    <label>Total Open Pipeline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>