force-app/main/default/objects/NPSFocusSnaps__c/fields/Total_Open_Pipelinen__c.field-meta.xml
<CustomField>
    <fullName>Total_Open_Pipelinen__c</fullName>
    <label>Total Open Pipelinen</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>